<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
                xmlns:tools="http://schemas.android.com/tools"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:paddingLeft="@dimen/activity_horizontal_margin"
                android:paddingRight="@dimen/activity_horizontal_margin"
                android:paddingTop="@dimen/activity_vertical_margin"
                android:paddingBottom="@dimen/activity_vertical_margin"
                tools:context="com.example.patrick.radoctor.PatientInfo_Activity">

    <LinearLayout
        android:orientation="vertical"
        android:layout_width="fill_parent"
        android:layout_height="fill_parent">

        <LinearLayout
            android:orientation="horizontal"
            android:layout_width="match_parent"
            android:layout_height="100dp"
            android:id="@+id/linearLayout">

            <ImageView
                android:layout_width="100dp"
                android:layout_height="match_parent"
                android:id="@+id/patientPhoto"
                android:background="#000000"
                android:contentDescription="patientImage"
                android:adjustViewBounds="true"
                />

            <LinearLayout
                android:orientation="vertical"
                android:layout_width="fill_parent"
                android:layout_height="fill_parent"
                android:paddingLeft="10dp">

                <TextView
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:text="@string/patient_info_name"
                    android:id="@+id/patientName"/>

                <TextView
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:text="@string/patient_info_age"
                    android:id="@+id/patientAge"/>

                <TextView
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:text="@string/patient_info_sex"
                    android:id="@+id/patientSex"/>

                <TextView
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:text="@string/patient_info_age_of_diagnosis"
                    android:id="@+id/patientAoD"/>

                <TextView
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:text="@string/patient_info_age_of_onset"
                    android:id="@+id/patientAoO"/>
            </LinearLayout>
        </LinearLayout>

        <ScrollView
            android:layout_width="fill_parent"
            android:layout_height="fill_parent"
            android:id="@+id/scrollView"
            android:scrollbars="none"
            android:fillViewport="true">

            <LinearLayout
                android:orientation="vertical"
                android:layout_width="fill_parent"
                android:layout_height="wrap_content"
                android:paddingTop="20dp">

                <Button
                    android:layout_width="150dp"
                    android:layout_height="wrap_content"
                    android:text="@string/title_activity_racriteria"
                    android:id="@+id/RACriteria"
                    android:layout_gravity="center_horizontal"
                    android:onClick = "onButtonClicked"/>

                <Button
                    android:layout_width="150dp"
                    android:layout_height="wrap_content"
                    android:text="@string/title_activity_diagnosis"
                    android:id="@+id/Diagnosis"
                    android:layout_gravity="center_horizontal"
                    android:onClick = "onButtonClicked"/>

                <Button
                    android:layout_width="150dp"
                    android:layout_height="wrap_content"
                    android:text="@string/title_activity_disease"
                    android:id="@+id/DiseaseActivity"
                    android:layout_gravity="center_horizontal"
                    android:onClick = "onButtonClicked"/>

                <Button
                    android:layout_width="150dp"
                    android:layout_height="wrap_content"
                    android:text="@string/title_activity_drugs"
                    android:id="@+id/Drugs"
                    android:layout_gravity="center_horizontal"
                    android:onClick = "onButtonClicked"/>

                <Button
                    android:layout_width="150dp"
                    android:layout_height="wrap_content"
                    android:text="@string/title_activity_biologics"
                    android:id="@+id/Biologics"
                    android:layout_gravity="center_horizontal"
                    android:onClick = "onButtonClicked"/>

                <Button
                    android:layout_width="150dp"
                    android:layout_height="wrap_content"
                    android:text="@string/title_activity_graphs"
                    android:id="@+id/Graphs"
                    android:layout_gravity="center_horizontal"
                    android:onClick = "onButtonClicked"/>
            </LinearLayout>
        </ScrollView>
    </LinearLayout>

</RelativeLayout>
