<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
                xmlns:tools="http://schemas.android.com/tools"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:paddingLeft="@dimen/activity_horizontal_margin"
                android:paddingRight="@dimen/activity_horizontal_margin"
                android:paddingTop="@dimen/activity_vertical_margin"
                android:paddingBottom="@dimen/activity_vertical_margin"
                tools:context="com.example.patrick.radoctor.AddPatient_Activity">

    <LinearLayout
        android:orientation="vertical"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_alignParentTop="true"
        android:layout_alignParentLeft="true"
        android:layout_alignParentStart="true"
        android:id="@+id/linearLayout4">

        <TextView
            android:layout_width="match_parent"
            android:layout_height="40dp"
            android:text="@string/title_activity_add_patient"
            android:id="@+id/addPatientTextView"
            android:gravity="center"/>

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/patient_info_name"
            android:id="@+id/textView3"/>

        <EditText
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:id="@+id/nameEditText"
            android:editable="true"
            android:enabled="true"
            android:inputType="text"/>

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/patient_info_age"
            android:id="@+id/textView4"/>

        <EditText
            android:layout_width="50dp"
            android:layout_height="wrap_content"
            android:id="@+id/ageEditText"
            android:editable="true"
            android:enabled="true"
            android:inputType = "number"/>

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/patient_info_sex"
            android:id="@+id/textView5"/>

        <Spinner
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:id="@+id/sexSpinner"
            android:spinnerMode="dialog"
            android:paddingTop="5dp"
            android:paddingBottom="5dp"/>

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/patient_info_age_of_diagnosis"
            android:id="@+id/textView6"/>

        <EditText
            android:layout_width="50dp"
            android:layout_height="wrap_content"
            android:id="@+id/aodEditText"
            android:inputType = "number"/>

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/patient_info_age_of_onset"
            android:id="@+id/textView7"/>

        <EditText
            android:layout_width="50dp"
            android:layout_height="wrap_content"
            android:id="@+id/aooEditText"
            android:inputType = "number"/>

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/button_add_photo"
            android:id="@+id/textView15"/>

        <ImageButton
            android:layout_width="100dp"
            android:layout_height="100dp"
            android:id="@+id/addImage"
            android:contentDescription="Picture"
            android:onClick="onButtonClicked"
            android:scaleType="fitCenter"
            android:adjustViewBounds="true"/>

        <LinearLayout
            android:orientation="horizontal"
            android:layout_width="match_parent"
            android:layout_height="wrap_content">

            <Button
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/button_cancel"
                android:id="@+id/cancelButtonAddPatient"
                android:layout_marginLeft="50dp"
                android:onClick="onButtonClicked"/>

            <Button
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/button_save"
                android:id="@+id/saveButtonAddPatient"
                android:layout_marginLeft="50dp"
                android:onClick="onButtonClicked"/>
        </LinearLayout>

    </LinearLayout>

</RelativeLayout>