<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
                xmlns:tools="http://schemas.android.com/tools"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:paddingLeft="@dimen/activity_horizontal_margin"
                android:paddingRight="@dimen/activity_horizontal_margin"
                android:paddingTop="@dimen/activity_vertical_margin"
                android:paddingBottom="@dimen/activity_vertical_margin"
                tools:context="com.example.patrick.radoctor.DiseaseActivity_Activity"
                android:transitionGroup="false"
                android:id="@+id/RelativeLayoutDiseaseActivity">

    <LinearLayout
        android:orientation="vertical"
        android:layout_width="fill_parent"
        android:layout_height="fill_parent">

        <TextView
            android:text="@string/title_activity_das28"
            android:layout_width="match_parent"
            android:layout_height="50dp"
            android:clickable="true"
            android:id="@+id/das28Button"
            android:gravity="fill_vertical"
            android:textColor="#ff000000"
            android:textSize="20sp"
            android:onClick="onTextViewClicked"/>

        <View
            android:layout_width="fill_parent"
            android:layout_height="2dp"
            android:background="#c0c0c0"/>

        <TextView
            android:text="@string/title_activity_csdai"
            android:layout_width="match_parent"
            android:layout_height="50dp"
            android:clickable="true"
            android:id="@+id/cdaiSdaiButton"
            android:gravity="fill_vertical"
            android:textColor="#ff000000"
            android:textSize="20sp"
            android:onClick="onTextViewClicked"/>

        <View
            android:layout_width="fill_parent"
            android:layout_height="2dp"
            android:background="#c0c0c0"/>

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/title_activity_das28"
            android:id="@+id/textView13"
            android:paddingTop="15dp"
            android:textColor="#000075"
            android:textSize="15sp"/>

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/label_das28"
            android:paddingTop="5dp"
            android:id="@+id/diseaseActivitydas28Score"
            android:paddingLeft="20dp"
            />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/label_last_updated"
            android:id="@+id/diseaseActivitydas28lastUpdate"
            android:paddingTop="5dp"
            android:paddingLeft="20dp"/>

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/title_activity_csdai"
            android:id="@+id/textView14"
            android:paddingTop="15dp"
            android:textColor="#000075"
            android:textSize="15sp"/>

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/label_cdai"
            android:paddingTop="5dp"
            android:id="@+id/diseaseActivitycdaiScore"
            android:paddingLeft="20dp"
            />
        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/label_sdai"
            android:paddingTop="5dp"
            android:id="@+id/diseaseActivitysdai8Score"
            android:paddingLeft="20dp"
            />
        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/label_last_updated"
            android:id="@+id/diseaseActivitycsdailastUpdate"
            android:paddingTop="5dp"
            android:paddingLeft="20dp"/>

    </LinearLayout>


</RelativeLayout>
