<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
                xmlns:tools="http://schemas.android.com/tools"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:paddingLeft="@dimen/activity_horizontal_margin"
                android:paddingRight="@dimen/activity_horizontal_margin"
                android:paddingTop="@dimen/activity_vertical_margin"
                android:paddingBottom="@dimen/activity_vertical_margin"
                tools:context="com.example.patrick.radoctor.Diagnosis_Activity">

    <LinearLayout
        android:orientation="vertical"
        android:layout_width="fill_parent"
        android:layout_height="fill_parent">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textAppearance="?android:attr/textAppearanceSmall"
            android:text="@string/label_last_updated"
            android:id="@+id/diagnosisLastUpdated"
            android:textColor="#000075"
            android:textSize="10sp"/>

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/label_tender"
            android:id="@+id/labelTender"
            android:paddingTop="10dp"
            android:textColor="#000075"
            android:textSize="15sp"/>

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="0 tender joints"
            android:id="@+id/TenderTextView"
            android:paddingTop="5dp"
            android:paddingBottom="5dp"/>

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/label_swollen"
            android:id="@+id/labelSwollen"
            android:textColor="#000075"
            android:textSize="15sp"/>

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="0 swollen joints"
            android:id="@+id/SwollenTextView"
            android:paddingTop="5dp"
            android:paddingBottom="5dp"/>

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/label_esr"
            android:id="@+id/labelESR"
            android:textColor="#000075"
            android:textSize="15sp"/>

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="0 mm/hr"
            android:id="@+id/ESRTextView"
            android:paddingTop="5dp"
            android:paddingBottom="5dp"/>

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/label_cpr"
            android:id="@+id/labelCRP"
            android:textColor="#000075"
            android:textSize="15sp"/>

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="0 mg/L"
            android:id="@+id/CRPTextView"
            android:paddingTop="5dp"
            android:paddingBottom="5dp"/>

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/label_rf"
            android:id="@+id/labelRF"
            android:textColor="#000075"
            android:textSize="15sp"/>

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="0 U/mL"
            android:id="@+id/RFTextView"
            android:paddingTop="5dp"
            android:paddingBottom="5dp"/>

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/label_gcsf"
            android:id="@+id/labelGCSF"
            android:textColor="#000075"
            android:textSize="15sp"/>

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="0 pg/mL"
            android:id="@+id/GCSFTextView"
            android:paddingTop="5dp"
            android:paddingBottom="5dp"/>

        <Button
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/title_activity_photos_"
            android:id="@+id/photosButtonDiagnosis"
            android:layout_gravity="center_horizontal"
            android:onClick="onButtonClicked"/>

        <Button
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/button_update"
            android:id="@+id/updateButtonDiagnosis"
            android:layout_gravity="center_horizontal"
            android:layout_marginTop="10dp"
            android:onClick="onButtonClicked"/>
    </LinearLayout>
</RelativeLayout>
